bad/assign_new_class_bool.example_compiler_output
ERROR
[1mbad/assign_new_class_bool.lat:6:8: [1;31merror: [0;1mleft side is not assignable[m
	new Y = true;
	      [1;32m^[m
[1mbad/assign_new_class_bool.lat:6:2: [1;34mnote: [0;1mleft side starts here[m
	new Y = true;
	[1;32m^[m
